--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <img class="thunbnailblog" src="images/blogs/blog-3.png" alt="">
               </div>
               <div class="articletitle">
-                <h5 class="articleheading">7 typography tipsfor interface design</h5>
+                <h5 class="articleheading">7 tips for web design</h5>
                 <p>By <a href="#"> Tess Gadd</a></p>
               </div>
             </div>
